# poke-me

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/pokeme/: cli.py  server.py
src/pokeme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/pokeme/notifications/: __init__.py  desktop.py
tests/: test_server.py  test_store.py
